# audit-evidence-compiler

./: .aec-config.example  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  architecture.mmd  architecture_diagram.md  package-lock.json  package.json  package.sh  pyproject.toml
.claude/: settings.json
.yukticastle/: .env.example  Dockerfile  api-key.sh  architect-prompt.md  ask.mts  claude-login.sh  clean.mts  codex-login.sh  context.mts  dag-executor.ts  dag.ts  doctor.mts  implement-prompt.md  introspect.mts  lint.mts  main.mts  migration-auditor-prompt.md  openrouter.ts  ping.mts  report.mts  review-prompt.md  roles.json  security-auditor-prompt.md  spec-critic.mts  test-engineer-prompt.md  yc-unlock-prisma.sh
cli/: aec_demo.py
docs/: auth-setup.md  demo-video-script.md  mcp-setup.md  slide-deck.html  slide-deck.md  splunk-app-install.md  splunk-setup.md  submission-text.md  web-dashboard-deploy.md
infra/: Caddyfile  Dockerfile.mcp-livehybrid  Dockerfile.mcp-official  aec-web.service  docker-compose.mcp.yml
samples/: iso27001-a516.json  iso27001-a921.json  soc2-cc61-q2.json  soc2-cc61.json  soc2-cc72.json
scripts/: generate_savedsearches.py  insert-mltk-web.sh  install_botsv3.sh  install_mltk.sh  install_splunk_app.sh  manage.sh  record-demo.sh  record-mltk-clip.sh  seed_posture.py  setup.sh
tasks/: 001-priors-parser.md  002-mcp-client.md  003-langgraph-agent.md  004-formatter.md  005-demo-cli.md  006-spl-validator.md  007-panel-debate.md  008-merkle-evidence-chain.md  009-panel-must-fixes.md  010-splunk-integration.md  011-wire-xlsx-merkle.md  011b-transport-fixes.md  012-live-splunk-bots.md  013-splunk-mcp-integration.md  014-counter-evidence-loop.md  015-drift-detection.md  016-langgraph-wrapper.md  017-differential-framework-mapping.md  018-splunk-app-package.md  019-web-dashboard.md  020-foundation-sec-fourth-persona.md  021-soc-incident-response-mode.md  022-compliance-posture-dashboard.md  023-auditor-verification-portal.md  README.md  _roadmap.md  _template.bugfix.md  _template.e2e.md  _template.md  _template.refactor.md  _template.schema.md  _template.ui.md
tests/: test_aec_demo.py  test_aec_demo_integration.py  test_drift.py  test_drift_panel.py  test_formatter.py  test_foundation_sec.py  test_framework_mapper.py  test_graph.py  test_incident_mapper.py  test_integrity.py  test_mcp_integration.py  test_mcp_livehybrid.py  test_mcp_official.py  test_mcp_router.py  (+12 more)
(+68 files in other folders)
