[project]
name = "audit-evidence-compiler"
version = "0.1.0"
description = "AI agent that compiles Splunk-sourced evidence into audit-ready artifacts for SOC 2, ISO 27001, NIST CSF."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Veera Sandiparthi", email = "reachveera2024@gmail.com" }]
keywords = ["splunk", "compliance", "soc2", "iso27001", "nist", "audit", "vciso", "mcp", "agent"]

dependencies = [
    "anthropic>=0.40.0",
    "langgraph>=0.2.50",
    "mcp>=1.0.0",
    "openpyxl>=3.1.5",
    "requests>=2.28.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
panel-api = [
    "openai>=1.0.0",
    "google-generativeai>=0.8.0",
]
splunk = []
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[project.scripts]
aec = "aec.cli:app"
aec_demo = "cli.aec_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aec", "cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that require external services such as live Splunk or MCP servers",
]

[tool.ruff]
line-length = 100
target-version = "py311"
